--- a/Blog.html
+++ b/Blog.html
@@ -14,34 +14,28 @@
                <div class="col-12"> <h3 style="text-align: center; color: azure;"><br><br><br>Tours And Travel</h3><h1 style="text-align: center; color: azure;">Amazing Places on Earth</h1><br><h6 style="text-align: center; color: azure;">21 March 2020</h6></div>
             </div>
             <div class="row">
-                <div class="text-center pad col-lg-3 col-md-6 col-sm-12">
+                <div class="text-center pad col-lg-4 col-md-8 col-sm-12">
                     <div class="container-fluid colo">
                         <img src="https://images.pexels.com/photos/2007401/pexels-photo-2007401.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="img-fluid" alt="Responsive image">
                         <h5>Title</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis blanditiis, at minus expedita qui voluptatibus!</p>
                     </div>
                 </div>
-                <div class="text-center pad col-lg-3 col-md-6 col-sm-12">
+                <div class="text-center pad col-lg-4 col-md-8 col-sm-12">
                     <div class="container-fluid colo">
                         <img src="https://images.pexels.com/photos/2007401/pexels-photo-2007401.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="img-fluid" alt="Responsive image">
                         <h5>Title</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis blanditiis, at minus expedita qui voluptatibus!</p>
                     </div>
                 </div>
-                <div class="text-center pad col-lg-3 col-md-6 col-sm-12">
+                <div class="text-center pad col-lg-4 col-md-8 col-sm-12">
                     <div class="container-fluid colo">
                         <img src="https://images.pexels.com/photos/2007401/pexels-photo-2007401.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="img-fluid" alt="Responsive image">
                         <h5>Title</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis blanditiis, at minus expedita qui voluptatibus!</p>
                     </div>
                 </div>
-                <div class="text-center pad col-lg-3 col-md-6 col-sm-12">
-                    <div class="container-fluid colo">
-                        <img src="https://images.pexels.com/photos/2007401/pexels-photo-2007401.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="img-fluid" alt="Responsive image">
-                        <h5>Title</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis blanditiis, at minus expedita qui voluptatibus!</p>
-                    </div>
-                </div>
+                
             </div>
             <br><br>
             <div class="row">
@@ -50,19 +44,13 @@
                       <h5 class="mt-0 padd">Media heading</h5>
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem in odio aperiam, impedit pariatur ex mollitia esse voluptatum. Maiores eius fuga velit inventore, placeat veritatis ad necessitatibus illo nihil exercitationem sunt quas provident, recusandae saepe, odit magni! Iusto dolorum ipsa culpa at? Earum exercitationem veniam recusandae dignissimos amet, dolorem provident minus quidem aliquid officia aliquam, hic id alias sequi magnam.
                     </div>
-                    <img class="mr-3 size " src="https://img.etimg.com/thumb/msid-66129697,width-640,resizemode-4,imgsize-342241/how-to-get-your-trips-sponsored.jpg" alt="Generic placeholder image">
+                    <img class="size " src="https://img.etimg.com/thumb/msid-66129697,width-640,resizemode-4,imgsize-342241/how-to-get-your-trips-sponsored.jpg" alt="Generic placeholder image">
                 </div>
             </div>
             <br><br>
-            <div class="row">
-                <div class="media">
-                    <img class="mr-3 size" src="https://img.etimg.com/thumb/msid-66129697,width-640,resizemode-4,imgsize-342241/how-to-get-your-trips-sponsored.jpg" alt="Generic placeholder image">
-                    <div class="media-body padd">
-                      <h5 class="mt-0">Media heading</h5>
-                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint nesciunt culpa autem. Repellendus corrupti aperiam assumenda magni veniam necessitatibus odit reprehenderit quo expedita architecto? Fuga quaerat laboriosam consectetur, iste quod repudiandae, animi et enim in consequatur est vero! Aut animi neque nostrum soluta aperiam atque deserunt esse quasi tenetur praesentium hic, recusandae incidunt quae unde veritatis repellat pariatur, enim laboriosam.
-                    </div>
-                </div>
-            </div> 
+            </div>
+            
+        </div>
         </div>
 
     </body>
