--- a/Blog.html
+++ b/Blog.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="text-center pad col-lg-4 col-md-8 col-sm-12">
                     <div class="container-fluid colo">
-                        <img src="https://images.pexels.com/photos/2007401/pexels-photo-2007401.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="img-fluid" alt="Responsive image">
+                        <img src="https://cdn1.goibibo.com/t_tg_fs/east-sikkim-gangtok-147791514406-orijgp.jpg" class="img-fluid" alt="Responsive image">
                         <h5>Gangtok</h5>
                         Gangtok is the capital of the mountainous northern Indian state of Sikkim. Established as a Buddhist pilgrimage site in the 1840s, the city became capital of an independent monarchy after British rule ended, but joined India in 1975.            </div>
                 </div>
